k8s/ingress/auth-middleware.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  namespace: ecommerce
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: ecommerce-auth-stripprefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 4000
