k8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: ecommerce
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:

      # 🔥 AUTH FIRST
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 4000

      # PRODUCTS
      - path: /products
        pathType: Prefix
        backend:
          service:
            name: product
            port:
              number: 4001

      # ORDER
      - path: /order
        pathType: Prefix
        backend:
          service:
            name: order
            port:
              number: 4002

      # PAYMENT
      - path: /payment
        pathType: Prefix
        backend:
          service:
            name: payment
            port:
              number: 4003

      # 🔥 LAST (VERY IMPORTANT)
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
